--- a/static/index.html
+++ b/static/index.html
@@ -5,12 +5,14 @@
     <title>مساعد التقارير الصوتي</title>
 </head>
 <body style="font-family: Arial; text-align: center; margin-top: 50px;">
-    <h1>📝 مساعد إعداد تقرير الفحص</h1>
-    <h2 id="fieldLabel">اضغط لبدء التسجيل للتاريخ</h2>
-    <button id="recordBtn">🎙️ ابدأ التسجيل</button>
-    <button id="stopBtn" disabled>⏹️ أوقف التسجيل</button>
+    <h1>📑 مساعد إعداد تقرير الفحص الفني</h1>
+    <h2 id="fieldLabel">🎙️ أرسل تسجيلك الأول</h2>
+
+    <button id="recordBtn">🎤 ابدأ التسجيل</button>
+    <button id="stopBtn" disabled>⏹️ إيقاف</button>
+
+    <p id="status" style="font-size: 18px; margin-top: 20px;"></p>
     <audio id="responseAudio" controls style="margin-top: 20px;"></audio>
-    <p id="status" style="margin-top: 20px; font-size: 18px;"></p>
 
     <script src="script.js"></script>
 </body>
