--- a/static/index.html
+++ b/static/index.html
@@ -14,6 +14,6 @@
 
     <audio id="audioPlayer" controls></audio>
 
-    <script src="script.js"></script>
+    <script src="/static/script.js"></script>
 </body>
 </html>
