--- a/static/index.html
+++ b/static/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>🎙️ Talk to the Assistant</title>
 </head>
-<body>
-    <h2>🎤 Talk to the Assistant</h2>
+<body style="font-family: sans-serif; direction: rtl; padding: 20px;">
+    <h2>🎤 مساعد إعداد التقارير الصوتي</h2>
+
     <button id="startBtn">Start Recording</button>
     <button id="stopBtn" disabled>Stop Recording</button>
 
@@ -14,6 +15,6 @@
 
     <audio id="audioPlayer" controls></audio>
 
-    <script src="/static/script.js"></script>
+    <script src="static/script.js"></script>
 </body>
 </html>
