--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>مساعد التقارير الصوتية</title>
+  <meta charset="UTF-8" />
+  <title>مساعد إعداد التقارير الصوتية</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f2f2f2;
-      padding: 20px;
+      background-color: #f8f8f8;
+      padding: 30px;
       direction: rtl;
+      text-align: right;
     }
+
     h1 {
-      color: #2c3e50;
+      color: #333;
     }
+
     button {
       padding: 10px 20px;
       font-size: 16px;
-      margin: 5px;
+      margin-top: 10px;
     }
+
     #result {
       margin-top: 20px;
-      background-color: #fff;
-      padding: 10px;
-      border: 1px solid #ddd;
+      padding: 15px;
+      background: #ffffff;
+      border: 1px solid #ccc;
     }
   </style>
 </head>
@@ -30,8 +34,10 @@
   <h1>🎙️ مساعد إعداد التقارير - قسم الهندسة الجنائية</h1>
   <button id="startBtn">▶️ بدء التسجيل</button>
   <button id="stopBtn">⏹️ إيقاف</button>
+
   <div id="result"></div>
 
-  <script src="script.js"></script>
+  <!-- ✅ المسار الصحيح للسكربت -->
+  <script src="static/script.js"></script>
 </body>
 </html>
