--- a/index.html
+++ b/index.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>مساعد إعداد التقارير</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
-  <style>
-    body {
-      background-color: #f8f9fa;
-      padding: 2rem;
-      font-family: 'Tahoma', sans-serif;
-    }
-    #response {
-      white-space: pre-line;
-      margin-top: 1rem;
-    }
-    .btn-group {
-      margin-top: 1rem;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>مساعد التقارير الصوتي</title>
+    <style>
+        body { font-family: 'Segoe UI', sans-serif; background-color: #f7f7f7; text-align: center; direction: rtl; }
+        #chat { max-width: 600px; margin: 20px auto; text-align: right; padding: 10px; background: #fff; border-radius: 8px; overflow-y: auto; height: 400px; border: 1px solid #ccc; }
+        .user { background: #d4edda; padding: 8px; margin: 5px; border-radius: 5px; }
+        .assistant { background: #f8d7da; padding: 8px; margin: 5px; border-radius: 5px; }
+        #controls { margin-top: 20px; }
+        #start-btn { padding: 12px 20px; font-size: 18px; background: #007bff; color: #fff; border: none; border-radius: 6px; cursor: pointer; }
+        #start-btn:hover { background: #0056b3; }
+    </style>
 </head>
 <body>
-  <div class="container text-end">
-    <h1 class="mb-4">🎙️ مساعد إعداد التقارير</h1>
-    <p id="response">جاري التحميل...</p>
-    <div class="btn-group">
-      <button class="btn btn-primary" onclick="startRecording()">🎤 تحدث الآن</button>
-      <button class="btn btn-secondary" onclick="location.reload()">🔄 إعادة</button>
+    <h1>👮‍♀️ مساعد إعداد تقارير الفحص</h1>
+    <div id="chat">
+        <div class="assistant">مرحباً بك في مساعد إنشاء التقارير الخاص بقسم الهندسة الجنائية. اضغط على الزر وابدأ بالتحدث.</div>
     </div>
-  </div>
+    <div id="controls">
+        <button id="start-btn">🎙️ ابدأ التحدث</button>
+    </div>
 
-  <script src="static/script.js"></script>
+    <script src="/static/script.js"></script>
 </body>
 </html>
