--- a/index.html
+++ b/index.html
@@ -2,58 +2,39 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>مساعد إعداد التقارير</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap">
+  <title>مساعد التقارير الصوتي</title>
   <style>
     body {
-      font-family: 'Cairo', sans-serif;
-      background-color: #f4f4f4;
-      direction: rtl;
+      font-family: 'Dubai', sans-serif;
       text-align: right;
-      padding: 20px;
+      padding: 30px;
+      background-color: #f9f9f9;
     }
-
-    #chat {
-      background-color: white;
+    #log {
+      margin-top: 20px;
       padding: 15px;
-      border-radius: 8px;
-      max-width: 600px;
-      margin: 20px auto;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      background-color: #fff;
+      border: 1px solid #ccc;
+      height: 300px;
       overflow-y: auto;
-      max-height: 400px;
     }
-
-    #startButton {
-      display: block;
-      margin: 0 auto;
-      background-color: #0084ff;
-      color: white;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
+    button {
+      font-size: 18px;
+      padding: 10px 20px;
+      margin: 5px;
     }
-
-    .user {
-      color: #333;
-      font-weight: bold;
-      margin: 8px 0 4px;
-    }
-
-    .assistant {
-      color: #0084ff;
-      margin: 4px 0 8px;
+    #field-buttons {
+      margin-top: 15px;
     }
   </style>
 </head>
 <body>
-  <h2 style="text-align:center;">🤖 مساعد إعداد التقارير الجنائية</h2>
-  <div id="chat">
-    <!-- المحادثة تظهر هنا -->
-  </div>
+  <h1>👮‍♀️ مساعد التقارير الصوتي</h1>
+  <p>اضغط على الزر لبدء المحادثة 👇</p>
   <button id="startButton">🎙️ ابدأ المحادثة</button>
+
+  <div id="field-buttons"></div>
+  <div id="log"></div>
 
   <script src="/static/script.js"></script>
 </body>
